--- a/index.html
+++ b/index.html
@@ -119,22 +119,12 @@
       	</div>
   </div>
 </div>
-
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-<p>e</p>
-
+	  <h1>Power Rangers Fanpage</h1>
+		  <h2>Do You Love the Power Rangers?</br>Then You Came to the Right Place!!!</h2>
+      <p>Power Rangers is a kids TV show about seven kids in their teens who fight
+			   evil in order to save the world! </br>When aliens attack Earth and jeopardize its safety, the
+				 brave heros continue to confront them and stop them every time. </br>Their awesome fighting techniques
+				 and abilities unique and unpredictible. This fanpage will explain everything a beginner</br> needs to know</br>
+				 about the Mighty Morphin Power Ranger religion </p>
 </body>
 </html>
