--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       	<div class="dropdown">
           <button class="dropbtn">Rangers</button>
           <div class="dropdown-content">
-            <a href="#">Red</a>
+            <a href="PowerRangers(usable)\RedPowerRanger.html">Red</a>
             <a href="#">Blue</a>
             <a href="#">Yellow</a>
             <a href="#">Gold</a>
