red and vblue have code
just pics tho

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <button class="dropbtn">Rangers</button>
           <div class="dropdown-content">
             <a href="PowerRangers(usable)\RedPowerRanger.html">Red</a>
-            <a href="#">Blue</a>
+            <a href="PowerRangers(usable)\BluePowerRanger.html">Blue</a>
             <a href="#">Yellow</a>
             <a href="#">Gold</a>
             <a href="#">Pink</a>
