fixed the stuff
dont worry it works now, i think

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
           <div class="dropdown-content">
             <a href="PowerRangers(usable)\RedPowerRanger.html">Red</a>
             <a href="PowerRangers(usable)\BluePowerRanger.html">Blue</a>
-            <a href="#">Yellow</a>
-            <a href="#">Gold</a>
-            <a href="#">Pink</a>
-            <a href="#">Black</a>
+            <a href="PowerRangers(usable)\YellowPowerRanger.html">Yellow</a>
+            <a href="PowerRangers(usable)\GoldPowerRanger.html">Gold</a>
+            <a href="PowerRangers(usable)\PinkPowerRanger.html">Pink</a>
+            <a href="PowerRangers(usable)\BlackPowerRanger.html">Black</a>
           </div>
         </div>
         <div class="dropdown">
