--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html>
+<head>
+<style>
+
+
+
+</style>
+</head>
+<body>
+<img src="https://vignette.wikia.nocookie.net/powerrangers/images/1/13/Mmpr-red.png/revision/latest?cb=20130726024302">
+
+</body>
+</html>
