fixed the crators and sources
added .html to bolth files

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
       	<div class="dropdown">
           <button class="dropbtn">History</button>
           <div class="dropdown-content">
-              <a href="#">Early</a>
-              <a href="#">Mid</a>
-              <a href="#">Late</a>
+              <a href="history\early.html">Early</a>
+              <a href="history\late.html">Mid</a>
+              <a href="history\mid.html">Late</a>
           </div>
         </div>
       	<div class="dropdown">
@@ -113,8 +113,8 @@
         <div class="dropdown">
           <button class="dropbtn">About</button>
           <div class="dropdown-content">
-            <a href="#">Sources</a>
-            <a href="#">Creators</a>
+            <a href="about\sources.html">Sources</a>
+            <a href="about\creators.html">Creators</a>
           </div>
       	</div>
   </div>
