--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -63,7 +63,7 @@
 </style>
 </head>
 <body>
-<img src="https://vignette.wikia.nocookie.net/powerrangers/images/b/b3/Prz-gold.png/revision/latest?cb=20140122025605">
+<img src="https://vignette.wikia.nocookie.net/deathbattlefanon/images/e/ef/Yellow-Ranger-Trini-Kwan-Power-Rangers.jpg/revision/latest?cb=20160915023856">
 
 <img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
       <div class="top-right">
