--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.bodyfont {
+    font-famliy:Fjalla One
+}
 </style>
 </head>
 <body>
