changed "we've got the power" to "it's morphin' time"
:art:

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <div class="container">
   <img src="http://media.comicbook.com/2017/06/mighty-morphin-power-rangers-1001579-1280x0.jpg" alt="Norway" style="width:100%;">
-  <div class="centered">WE'VE GOT THE<br /><div class="powerful">POWER</div>
+  <div class="centered">IT'S MORPHIN'<br /><div class="powerful">TIME</div>
   </div>
       <img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
       <div class="top-right">
