--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -58,11 +58,15 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.bodyfont {
+    font-famliy:Fjalla One
+}
 
 
 </style>
 </head>
 <body>
+<h1 class="bodyfont">THE RED RANGER</h1>
 <img src="https://vignette.wikia.nocookie.net/powerrangers/images/1/13/Mmpr-red.png/revision/latest?cb=20130726024302">
 
 <img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
