--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -66,6 +66,7 @@
 </style>
 </head>
 <body>
+<div></div>
 <h1 class="bodyfont">THE RED RANGER</h1>
 <img src="https://vignette.wikia.nocookie.net/powerrangers/images/1/13/Mmpr-red.png/revision/latest?cb=20130726024302">
 
