added red ranger description

--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -95,6 +95,9 @@
           </div>
       	</div>
       </div>
+    <p>The Red Ranger is never to be messed with. He is usually the leader of</br>
+    the Power Rangers. He is the "Head Honco", "Large and in Charge" He tells</br>
+    the other Rangers what to do and they do it. </p>
 
 
 </body>
