--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -97,7 +97,8 @@
       </div>
     <p>The Red Ranger is never to be messed with. He is usually the leader of</br>
     the Power Rangers. He is the "Head Honco", "Large and in Charge" He tells</br>
-    the other Rangers what to do and they do it. </p>
+    the other Rangers what to do and they do it. He is strong and viginant but</br>
+    has a shorter patience than the rest of the Rangers. </p>
 
 
 </body>
