added desc. to red ranger

--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -98,7 +98,10 @@
     <p>The Red Ranger is never to be messed with. He is usually the leader of</br>
     the Power Rangers. He is the "Head Honco", "Large and in Charge" He tells</br>
     the other Rangers what to do and they do it. He is strong and viginant but</br>
-    has a shorter patience than the rest of the Rangers. </p>
+    has a shorter patience than the rest of the Rangers. In the Television show</br>
+    Red Power Rangers are either the leader or a hot-headed rookie that was</br>
+    recruited. They are always given a strong (sometimes the strongest) weapons </br>
+    of all the Rangers. </p>
 
 
 </body>
