added list to red rangers

--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -101,7 +101,18 @@
     has a shorter patience than the rest of the Rangers. In the Television show</br>
     Red Power Rangers are either the leader or a hot-headed rookie that was</br>
     recruited. They are always given a strong (sometimes the strongest) weapons </br>
-    of all the Rangers. </p>
+    of all the Rangers.</p>
+      <ul><p>The list of the Red Ranger cast include</p>
+        <li>Jason Lee Scott</li>
+        <li>Rocky DeSantos</li>
+        <li>Leo Corbett</li>
+        <li>Carter Grayson</li>
+        <li>Wesley Collins</li>
+        <li>Cole Evans</li>
+        <li>Troy Burrows</li>
+        <li>Brody Romero</li>
+        <li>Mack Hartford</li>
+      </ul>
 
 
 </body>
