Added desc. of blue ranger

--- a/PowerRangers(usable)/BluePowerRanger.html
+++ b/PowerRangers(usable)/BluePowerRanger.html
@@ -94,7 +94,23 @@
           </div>
       	</div>
       </div>
-
+      <p>The Blue Power Ranger is usually the second in command of the "Mighty</br>
+      Power Rangers". The Blue Ranger in earlier series were very serious </br>
+      and known to be the smart Ranger on the battlefield. As the television</br>
+      series went on, the Blue Ranger became a comic relief. Usually the Ranger</br>
+      is a male but recnet series have introduced female charcters playing the </br>
+      role with a faintly lighter blue suit or Power Armor.</p>
+        <ul><p>The list of the Blue Ranger cast include</p>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
 
 </body>
 </html>
