changed blue output

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <button class="dropbtn">Rangers</button>
           <div class="dropdown-content">
             <a href="PowerRangers(usable)\RedPowerRanger.html">Red</a>
-            <a href="PowerRangers(usable)\BluePowerRanger.html">Blue</a>
+            <a href="BluePowerRanger.html">Blue</a>
             <a href="PowerRangers(usable)\YellowPowerRanger.html">Yellow</a>
             <a href="PowerRangers(usable)\GoldPowerRanger.html">Gold</a>
             <a href="PowerRangers(usable)\PinkPowerRanger.html">Pink</a>
