changed out put

--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
 			   evil in order to save the world! </br>When aliens attack Earth and jeopardize its safety, the
 				 brave heros continue to confront them and stop them every time. </br>Their awesome fighting techniques
 				 and abilities unique and unpredictible. This fanpage will explain everything a beginner</br> needs to know</br>
-				 about the Mighty Morphin Power Ranger religion </p>
+				 about the Mighty Morphin Power Ranger religion.</p>
 </body>
 </html>
