added charcters for red and blue rangers

--- a/PowerRangers(usable)/BluePowerRanger.html
+++ b/PowerRangers(usable)/BluePowerRanger.html
@@ -100,16 +100,16 @@
       series went on, the Blue Ranger became a comic relief. Usually the Ranger</br>
       is a male but recnet series have introduced female charcters playing the </br>
       role with a faintly lighter blue suit or Power Armor.</p>
-        <ul><p>The list of the Blue Ranger cast include</p>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+        <ul><p>The list of the Blue Ranger characters include</p>
+          <li>Billy Cranston</li>
+          <li>Rocky DeSantos</li>
+          <li>T.J. Johnson</li>
+          <li>Kai Chen</li>
+          <li>Chad Lee</li>
+          <li>Lucas Kendall</li>
+          <li>Theo Martin</li>
+          <li>Noah Carver</li>
+          <li>Madison Rocca</li>
         </ul>
 
 </body>
