--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -102,7 +102,7 @@
     Red Power Rangers are either the leader or a hot-headed rookie that was</br>
     recruited. They are always given a strong (sometimes the strongest) weapons </br>
     of all the Rangers.</p>
-      <ul><p>The list of the Red Ranger cast include</p>
+      <ul><p>The list of the Red Ranger characters include</p>
         <li>Jason Lee Scott</li>
         <li>Rocky DeSantos</li>
         <li>Leo Corbett</li>
