added desc for yellow ranger

--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -94,7 +94,21 @@
           </div>
       	</div>
       </div>
-
+      <p>The Yellow Ranger is almost always given to a character in the show.</br>
+      They are maily a subordinate fighter and is the moral booster for the team. </br>
+      These Rangers are usually female with an exeption of four male characters</br>
+      throughout the series. </p>
+        <ul><p>The list of the Yellow Ranger characters include</p>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
 
 </body>
 </html>
