added desc. to yellow ranger

--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -96,8 +96,12 @@
       </div>
       <p>The Yellow Ranger is almost always given to a character in the show.</br>
       They are maily a subordinate fighter and is the moral booster for the team. </br>
-      These Rangers are usually female with an exeption of four male characters</br>
-      throughout the series. </p>
+      These Rangers are usually female with an exception of four male characters</br>
+      throughout the series. Contraaversy struck the Yellow Ranger when fans </br>
+      wrote letters to the production company writing that having an asian charcter </br>
+      play the Yellow Ranger was racist and demeaning. The Power Rangers series</br>
+      didnt have an asian Yellow Ranger since Trini. THe Ranger often uses small</br>
+      weapons or flying objects such as daggers or shuriken.</p>
         <ul><p>The list of the Yellow Ranger characters include</p>
           <li></li>
           <li></li>
