--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       	<div class="dropdown">
           <button class="dropbtn">Rangers</button>
           <div class="dropdown-content">
-            <a href="valcro\PowerRangers(usable)\RedPowerRanger.html">Red</a>
+            <a href="PowerRangers(usable)\RedPowerRanger.html">Red</a>
             <a href="PowerRangers(usable)\BluePowerRanger.html">Blue</a>
             <a href="PowerRangers(usable)\YellowPowerRanger.html">Yellow</a>
             <a href="PowerRangers(usable)\GoldPowerRanger.html">Gold</a>
