added 2 </br> to the yellow ranger desc.

--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -94,7 +94,7 @@
           </div>
       	</div>
       </div>
-      <p>The Yellow Ranger is almost always given to a character in the show.</br>
+      <p></br></br>The Yellow Ranger is almost always given to a character in the show.</br>
       They are maily a subordinate fighter and is the moral booster for the team. </br>
       These Rangers are usually female with an exception of four male characters</br>
       throughout the series. Contraaversy struck the Yellow Ranger when fans </br>
