--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -103,15 +103,15 @@
       didnt have an asian Yellow Ranger since Trini. THe Ranger often uses small</br>
       weapons or flying objects such as daggers or shuriken.</p>
         <ul><p>The list of the Yellow Ranger characters include</p>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>Trini Kwan</li>
+          <li>Tanya Sloan</li>
+          <li>Ashley Hammond</li>
+          <li>Ashley Hammond</li>
+          <li>Kelsey Winslow</li>
+          <li>Taylor Earhardt</li>
+          <li>Lily Chilman</li>
+          <li>Gia Moran</li>
+          <li>Emily (Last Name Unknown)</li>
         </ul>
 
 </body>
