added cast members to gold ranger

--- a/PowerRangers(usable)/GoldPowerRanger.html
+++ b/PowerRangers(usable)/GoldPowerRanger.html
@@ -94,17 +94,18 @@
           </div>
       	</div>
       </div>
-      <p></br></br></p>
-        <ul><p>The list of the Yellow Ranger characters include</p>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+      <p></br></br>The Gold Power Ranger is a very powerful fighter and thinker.</br>
+      He is always added to the show later in the season to help overcome a </br>
+      a challenge the other Rangers are having trouble with. The original Gold</br>
+      Rangers name was Trey of Triforia. He had three personalities: Wisdom, Heart,</br>
+      and Courage which were ultimatly portrayed by identical triplets Tom, Tim,</br>
+      and Ted DiFillippo. </p>
+        <ul><p>The list of the Gold Ranger cast include</p>
+          <li>Ted DiFilippo</li>
+          <li>Tom DiFilippo</li>
+          <li>Tim DiFilippo</li>
+          <li>Austin St. John</li>
+          <li>Paul F. Rosenthal (voice)</li>
         </ul>
 
 </body>
