added bullet points to pink ranger

--- a/PowerRangers(usable)/PinkPowerRanger.html
+++ b/PowerRangers(usable)/PinkPowerRanger.html
@@ -94,6 +94,18 @@
           </div>
       	</div>
       </div>
+    <p></br></br></p>
+        <ul><p>The list of the Yellow Ranger characters include</p>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
 
 
 </body>
