added desc for piknk ranger

--- a/PowerRangers(usable)/PinkPowerRanger.html
+++ b/PowerRangers(usable)/PinkPowerRanger.html
@@ -94,7 +94,11 @@
           </div>
       	</div>
       </div>
-    <p></br></br></p>
+    <p></br></br>The Pink Power Ranger is always given to one member on the Ranger</br>
+    Squad. They are typically always female and follow other Rangers' advice.</br>
+    They are given the most straight-forward weapons such as generic swords or </br>
+    lances. Whenever a Pink Ranger is introduced into the series, they are always</br>
+    accompanied with another female ranger.</p>
         <ul><p>The list of the Yellow Ranger characters include</p>
           <li></li>
           <li></li>
