added pink ranger characters

--- a/PowerRangers(usable)/PinkPowerRanger.html
+++ b/PowerRangers(usable)/PinkPowerRanger.html
@@ -99,16 +99,16 @@
     They are given the most straight-forward weapons such as generic swords or </br>
     lances. Whenever a Pink Ranger is introduced into the series, they are always</br>
     accompanied with another female ranger.</p>
-        <ul><p>The list of the Yellow Ranger characters include</p>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+        <ul><p>The list of the Pink Ranger characters include</p>
+          <li>Kimberly Ann Hart</li>
+          <li>Katherine Hillard</li>
+          <li>Cassie Chan</li>
+          <li>Kendrix Morgan</li>
+          <li>Dana Mitchell</li>
+          <li>Sydney Drew</li>
+          <li>Emma Goodall</li>
+          <li>Sarah Thompson</li>
+          <li>Karone</li>
         </ul>
 
 
