added image to black power ranger and added desc.

--- a/PowerRangers(usable)/BlackPowerRanger.html
+++ b/PowerRangers(usable)/BlackPowerRanger.html
@@ -63,7 +63,7 @@
 </style>
 </head>
 <body>
-<img src="https://vignette.wikia.nocookie.net/powerrangers/images/c/cf/Mmpr-black.png/revision/latest/scale-to-width-down/150?cb=20130726024302">
+<img src="https://vignette.wikia.nocookie.net/powerrangers/images/6/69/Black_Meower.jpeg/revision/latest/scale-to-width-down/91?cb=20170510141016">
 
 <img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
       <div class="top-right">
@@ -94,7 +94,21 @@
           </div>
       	</div>
       </div>
-
+  <p></br></br>The Black Power Ranger is given to many powerful characters in the</br>
+  series. They are skilled and very powerful. When they are not in the show, they</br>
+  are replaced with a Green Ranger. There has never been a female Black Power Ranger.</br>
+  </p>
+      <ul><p>The list of the Black Ranger characters include</p>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
 
 </body>
 </html>
