added charcters to black ranger

--- a/PowerRangers(usable)/BlackPowerRanger.html
+++ b/PowerRangers(usable)/BlackPowerRanger.html
@@ -97,17 +97,18 @@
   <p></br></br>The Black Power Ranger is given to many powerful characters in the</br>
   series. They are skilled and very powerful. When they are not in the show, they</br>
   are replaced with a Green Ranger. There has never been a female Black Power Ranger.</br>
-  </p>
+  Not much is explained about the Black Ranger yet in the series but as they are</br>
+  mysterious, they are powerful.</p>
       <ul><p>The list of the Black Ranger characters include</p>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Zack Taylor</li>
+        <li>Adam Park</li>
+        <li>Carlos Vallerte</li>
+        <li>Danny Delgado</li>
+        <li>Tommy Oliver</li>
+        <li>Will Aston</li>
+        <li>Jungle Fury Bat Ranger</li>
+        <li>Dillon</li>
+        <li>Chase Randall</li>
       </ul>
 
 </body>
