added terget="blank" to wiki source

--- a/about/sources.html
+++ b/about/sources.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>SOURCES</h1>
-  <a href="http://powerrangers.wikia.com/wiki/RangerWiki">Power Rangers Wiki</a>
+  <a href="http://powerrangers.wikia.com/wiki/RangerWiki" target="_blank">Power Rangers Wiki</a>
 
 
 </body>
