added creators page content

--- a/about/creators.html
+++ b/about/creators.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html>
+<head>
+
+</head>
+<body>
+  <h1>CREATORS</h1>
+    <h2>Isaac Rinkleff-Duma</h2>
+    <h2>Cyrus Tallman</h2>
+</body>
+
+</html>
