fixed doubble bug
when you click on a power rnager then go to the meue agion it wont work now it works twice then braks
still not good :(

--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -71,27 +71,27 @@
       	<div class="dropdown">
           <button class="dropbtn">History</button>
           <div class="dropdown-content">
-              <a href="history\early.html">Early</a>
-              <a href="history\late.html">Mid</a>
-              <a href="history\mid.html">Late</a>
+              <a href="early.html">Early</a>
+              <a href="late.html">Mid</a>
+              <a href="mid.html">Late</a>
           </div>
         </div>
       	<div class="dropdown">
           <button class="dropbtn">Rangers</button>
           <div class="dropdown-content">
-            <a href="PowerRangers(usable)\RedPowerRanger.html">Red</a>
-            <a href="PowerRangers(usable)\BluePowerRanger.html">Blue</a>
-            <a href="PowerRangers(usable)\YellowPowerRanger.html">Yellow</a>
-            <a href="PowerRangers(usable)\GoldPowerRanger.html">Gold</a>
-            <a href="PowerRangers(usable)\PinkPowerRanger.html">Pink</a>
-            <a href="PowerRangers(usable)\BlackPowerRanger.html">Black</a>
+            <a href="RedPowerRanger.html">Red</a>
+            <a href="BluePowerRanger.html">Blue</a>
+            <a href="YellowPowerRanger.html">Yellow</a>
+            <a href="GoldPowerRanger.html">Gold</a>
+            <a href="PinkPowerRanger.html">Pink</a>
+            <a href="BlackPowerRanger.html">Black</a>
           </div>
         </div>
         <div class="dropdown">
           <button class="dropbtn">About</button>
           <div class="dropdown-content">
-            <a href="about\sources.html">Sources</a>
-            <a href="about\creators.html">Creators</a>
+            <a href="sources.html">Sources</a>
+            <a href="creators.html">Creators</a>
           </div>
       	</div>
       </div>
