--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -11,12 +11,7 @@
     position: fixed;
 }
 #toobig {
-	left: 30px;
-    position: absolute;
-    top: 2%;
-    left: 1%;
-    height: 8%;
-    position: fixed;
+    height: 10px;
 }
 /* menu buttons */
 .dropbtn {
