--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -11,7 +11,10 @@
     position: fixed;
 }
 #toobig {
-    height: 75%;
+    height: 50%;
+    top: 2%;
+    left: 1%;
+    height: 8%;
 }
 /* menu buttons */
 .dropbtn {
