--- a/PowerRangers(usable)/RedPowerRanger.html
+++ b/PowerRangers(usable)/RedPowerRanger.html
@@ -64,7 +64,7 @@
 <h1 class="bodyfont"></br></br>THE RED RANGER</h1>
 <img src="https://vignette.wikia.nocookie.net/powerrangers/images/1/13/Mmpr-red.png/revision/latest?cb=20130726024302">
 
-<img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
+<img id="toobig" src="" />
       <div class="top-right">
       	<div class="dropdown">
           <button class="dropbtn">History</button>
