fixed image and added link to all power ranger menu image
eeeee

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
 <style>
 .container {
     position: relative;
@@ -81,6 +82,25 @@
 .bodyfont {
     font-famliy:Fjalla One
 }
+/* below the fromt image*/
+.loveme {
+    font-family: 'Open Sans', sans-serif;
+    background-color: #042833;
+    color: white;
+}
+.titlehead {
+    text-align: center;
+}
+.question {
+    text-align: center;
+}
+.para {
+  text-align: left;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
 </style>
 </head>
 <body>
@@ -92,7 +112,7 @@
   <img src="http://media.comicbook.com/2017/06/mighty-morphin-power-rangers-1001579-1280x0.jpg" alt="Norway" style="width:100%;">
   <div class="centered">IT'S MORPHIN'<br /><div class="powerful">TIME</div>
   </div>
-      <img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
+      <a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
       	<div class="dropdown">
           <button class="dropbtn">History</button>
@@ -122,12 +142,14 @@
       	</div>
       </div>
 </div>
-	  <h1>Power Rangers Fanpage</h1>
-		  <h2>Do You Love the Power Rangers?</br>Then You Came to the Right Place!!!</h2>
-      <p>Power Rangers is a kids TV show about seven kids in their teens who fight
-			   evil in order to save the world! </br>When aliens attack Earth and jeopardize its safety, the
-				 brave heros continue to confront them and stop them every time. </br>Their awesome fighting techniques
-				 and abilities unique and unpredictible. This fanpage will explain everything a beginner</br> needs to know</br>
-				 about the Mighty Morphin Power Ranger religion.</p>
+  <div class="loveme">
+	  <div class="titlehead"><h1>Power Rangers Fanpage!</h1></div>
+		  <div class="question"><h2>Do You Love the Power Rangers?</br>Then You Came to the Right Place!!!</h2></div>
+      <div class="para"><p>Power Rangers is a kids TV show about seven kids in their teens who fight
+			   evil in order to save the world! </br></br>When aliens attack Earth and jeopardize its safety, the
+				 brave heros continue to confront them and stop them every time. </br></br>Their awesome fighting techniques
+				 and abilities unique and unpredictible. This fanpage will explain everything a beginner</br> needs to know
+				 about the Mighty Morphin Power Ranger religion.</p></div>
+  </div>
 </body>
 </html>
