--- a/PowerRangers(usable)/BlackPowerRanger.html
+++ b/PowerRangers(usable)/BlackPowerRanger.html
@@ -65,7 +65,7 @@
 <body>
 <img src="https://vignette.wikia.nocookie.net/powerrangers/images/6/69/Black_Meower.jpeg/revision/latest/scale-to-width-down/91?cb=20170510141016">
 
-<img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
+<a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
       	<div class="dropdown">
           <button class="dropbtn">History</button>
