--- a/PowerRangers(usable)/GoldPowerRanger.html
+++ b/PowerRangers(usable)/GoldPowerRanger.html
@@ -65,7 +65,7 @@
 <body>
 <img src="https://vignette.wikia.nocookie.net/powerrangers/images/b/b3/Prz-gold.png/revision/latest?cb=20140122025605">
 
-<img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
+<a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
       	<div class="dropdown">
           <button class="dropbtn">History</button>
