--- a/PowerRangers(usable)/YellowPowerRanger.html
+++ b/PowerRangers(usable)/YellowPowerRanger.html
@@ -65,7 +65,7 @@
 <body>
 <img src="https://vignette.wikia.nocookie.net/deathbattlefanon/images/e/ef/Yellow-Ranger-Trini-Kwan-Power-Rangers.jpg/revision/latest?cb=20160915023856">
 
-<img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" />
+<a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
       	<div class="dropdown">
           <button class="dropbtn">History</button>
