making the black one look good
the blakc one is half doje :ASfdd

--- a/PowerRangers(usable)/BlackPowerRanger.html
+++ b/PowerRangers(usable)/BlackPowerRanger.html
@@ -18,13 +18,8 @@
     position: fixed;
 }
 #vis {
-    height: 400px;
-    width: 600px;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 10%);
-    padding: 20px;
+  height: 200px;
+  width: 100%;
 }
 /* menu buttons */
 .dropbtn {
@@ -68,14 +63,19 @@
 }
 .about {
   background-color: #041b26;
-  color: #821324;
+  color: #a0293b;
   padding: 10px;
+  font-size: 40px;
+  padding-top: 70px;
+  max-height: 300px;
+  min-height: 300px;
+  text-align: left;
+  padding-right: 200px;
 }
 
 </style>
 </head>
 <body>
-<img id="vis" src="https://vignette.wikia.nocookie.net/powerrangers/images/6/69/Black_Meower.jpeg/revision/latest/scale-to-width-down/91?cb=20170510141016">
 
 <a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
@@ -106,11 +106,12 @@
           </div>
       	</div>
       </div>
-  <div class="about"><p></br></br>The Black Power Ranger is given to many powerful characters in the</br>
-  series. They are skilled and very powerful. When they are not in the show, they</br>
-  are replaced with a Green Ranger. There has never been a female Black Power Ranger.</br>
-  Not much is explained about the Black Ranger yet in the series but as they are</br>
+  <div class="about"><p>  The Black Power Ranger is given to many powerful characters in the</br>
+  series. They are skilled and very powerful. When they are not in the show, they
+  are replaced with a Green Ranger. There has never been a female Black Power Ranger.
+  Not much is explained about the Black Ranger yet in the series but as they are
   mysterious, they are powerful.</p></div>
+  <img id="vis" src="https://vignette.wikia.nocookie.net/powerrangers/images/6/69/Black_Meower.jpeg/revision/latest/scale-to-width-down/91?cb=20170510141016">
       <ul><p>The list of the Black Ranger characters include</p>
         <li>Zack Taylor</li>
         <li>Adam Park</li>
