--- a/PowerRangers(usable)/BlackPowerRanger.html
+++ b/PowerRangers(usable)/BlackPowerRanger.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 <style>
 
 .top-right {
@@ -18,7 +20,7 @@
     position: fixed;
 }
 #vis {
-  height: 200px;
+  height: 800px;
   width: 100%;
 }
 /* menu buttons */
@@ -66,11 +68,30 @@
   color: #a0293b;
   padding: 10px;
   font-size: 40px;
-  padding-top: 70px;
+  padding-top: 30px;
   max-height: 300px;
   min-height: 300px;
   text-align: left;
   padding-right: 200px;
+}
+.lies {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 35px;
+  background-color: #473339;
+  color: white;
+  padding: 15px;
+}
+.items {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+   list-style-type: none;
+   padding: 20px;
+   background-color: #a87987;
+   color: white;
+}
+li {
+  padding: 10px;
 }
 
 </style>
@@ -112,7 +133,8 @@
   Not much is explained about the Black Ranger yet in the series but as they are
   mysterious, they are powerful.</p></div>
   <img id="vis" src="https://vignette.wikia.nocookie.net/powerrangers/images/6/69/Black_Meower.jpeg/revision/latest/scale-to-width-down/91?cb=20170510141016">
-      <ul><p>The list of the Black Ranger characters include</p>
+      <div class="lies"><ul><p>The list of the Black Ranger characters include</p></div>
+      <div class="items">
         <li>Zack Taylor</li>
         <li>Adam Park</li>
         <li>Carlos Vallerte</li>
@@ -122,7 +144,10 @@
         <li>Jungle Fury Bat Ranger</li>
         <li>Dillon</li>
         <li>Chase Randall</li>
+      </div>
       </ul>
+
+      <a href="https://www.findcostume.com/adult-black-power-rangers-morphsuit.html?gclid=Cj0KCQiAhrbTBRCFARIsACY7MW0z2-djAXw-11hGxShpNmmY5MnfK5FYqcm_EBysUwCoGZymg9r-D0EaAkENEALw_wcB">Click here if you love the Black Power Ranger</a>
 
 </body>
 </html>
