--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     font-family: 'Open Sans', sans-serif;
     background-color: #042833;
     color: white;
+    padding: 15px;
 }
 .titlehead {
     text-align: center;
