--- a/PowerRangers(usable)/PinkPowerRanger.html
+++ b/PowerRangers(usable)/PinkPowerRanger.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
 <style>
 
 .top-right {
@@ -12,11 +14,14 @@
 }
 #toobig {
 	left: 30px;
-    position: absolute;
     top: 2%;
     left: 1%;
     height: 8%;
     position: fixed;
+}
+#vis {
+  height: 800px;
+  width: 100%;
 }
 /* menu buttons */
 .dropbtn {
@@ -58,12 +63,40 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
+.about {
+  background-color: #041b26;
+  color: #a0293b;
+  padding: 10px;
+  font-size: 40px;
+  padding-top: 30px;
+  max-height: 300px;
+  min-height: 300px;
+  text-align: left;
+  padding-right: 200px;
+}
+.lies {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 35px;
+  background-color: #775660;
+  color: white;
+  padding: 15px;
+}
+.items {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
+   list-style-type: none;
+   padding: 20px;
+   background-color: #a87987;
+   color: white;
+}
+li {
+  padding: 10px;
+}
 
 </style>
 </head>
 <body>
-<img src="https://vignette.wikia.nocookie.net/powerrangers/images/4/42/Mmpr-pink.png/revision/latest?cb=20130726024304">
 
 <a href="index.html"><img id="toobig" src="https://vignette.wikia.nocookie.net/logopedia/images/0/06/MMPR_Logo.png/revision/latest?cb=20140301211300" /></a>
       <div class="top-right">
@@ -94,12 +127,14 @@
           </div>
       	</div>
       </div>
-    <p></br></br>The Pink Power Ranger is always given to one member on the Ranger</br>
+  <div class="about"><p> </br></br>The Pink Power Ranger is always given to one member on the Ranger</br>
     Squad. They are typically always female and follow other Rangers' advice.</br>
     They are given the most straight-forward weapons such as generic swords or </br>
     lances. Whenever a Pink Ranger is introduced into the series, they are always</br>
-    accompanied with another female ranger.</p>
-        <ul><p>The list of the Pink Ranger characters include</p>
+    accompanied with another female ranger.</p></div>
+  <img id="vis" src="https://vignette.wikia.nocookie.net/powerrangers/images/4/42/Mmpr-pink.png/revision/latest?cb=20130726024304">
+      <div class="lies"><ul><p>The list of the Pink Ranger characters include</p></div>
+      <div class="items">
           <li>Kimberly Ann Hart</li>
           <li>Katherine Hillard</li>
           <li>Cassie Chan</li>
@@ -109,8 +144,8 @@
           <li>Emma Goodall</li>
           <li>Sarah Thompson</li>
           <li>Karone</li>
-        </ul>
-
+      </div>
+      </ul>
 
 </body>
 </html>
